--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "abstract-stream",
-  "version": "0.0.1",
-  "description": "abstract read/write stream for nosql database.",
-  "homepage": "https://github.com/snowyu/abstract-stream",
+  "name": "nosql-stream",
+  "version": "0.9.1",
+  "description": "add the read/write streamable ability to abstract-nosql database.",
+  "homepage": "https://github.com/snowyu/nosql-stream",
   "main": "./index",
   "files": [
     "README.md",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "abstract-object": "~1.2.1",
+    "batch-write-stream": "~0.1.6",
     "readable-stream": "~1.0.33"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "grunt-rev": "*",
     "grunt-saucelabs": "*",
     "grunt-usemin": "*",
-    "memdown-sync": "^1.1.1",
+    "memdown-sync": "~1.2.0",
     "mocha": "~2.0.1",
     "powerbuild": "*",
     "sinon": "~1.12.2",
@@ -45,7 +46,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/snowyu/abstract-stream"
+    "url": "https://github.com/snowyu/nosql-stream"
   },
   "keywords": [
     "abstract",
@@ -65,10 +66,10 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/snowyu/abstract-stream/blob/master/LICENSE-MIT"
+      "url": "https://github.com/snowyu/nosql-stream/blob/master/LICENSE-MIT"
     }
   ],
   "bugs": {
-    "url": "https://github.com/snowyu/abstract-stream/issues"
+    "url": "https://github.com/snowyu/nosql-stream/issues"
   }
 }
