--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nosql-stream",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "add the read/write streamable ability to abstract-nosql database.",
   "homepage": "https://github.com/snowyu/nosql-stream",
   "main": "./index",
@@ -17,6 +17,7 @@
   "dependencies": {
     "abstract-object": "~1.2.1",
     "batch-write-stream": "~0.1.6",
+    "minimatch": "~2.0.1",
     "readable-stream": "~1.0.33"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "grunt-rev": "*",
     "grunt-saucelabs": "*",
     "grunt-usemin": "*",
-    "memdown-sync": "~1.2.0",
+    "memdown-sync": "~1.3.0",
     "mocha": "~2.0.1",
     "powerbuild": "*",
     "sinon": "~1.12.2",
