--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nosql-stream",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "add the read/write streamable ability to abstract-nosql database.",
   "homepage": "https://github.com/snowyu/nosql-stream",
   "main": "./index",
@@ -9,13 +9,14 @@
     "LICENSE-MIT",
     "index.js",
     "test",
+    "abstract",
     "lib"
   ],
   "scripts": {
     "test": "grunt test"
   },
   "dependencies": {
-    "abstract-object": "~1.3.0",
+    "abstract-object": "~1.3.2",
     "batch-write-stream": "~0.1.6",
     "minimatch": "~2.0.1",
     "readable-stream": "~1.0.33"
