--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nosql-stream",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "add the read/write streamable ability to abstract-nosql database.",
   "homepage": "https://github.com/snowyu/nosql-stream",
   "main": "./index",
@@ -16,7 +16,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "abstract-object": "~1.3.2",
+    "abstract-iterator": ">=0.9.0",
+    "abstract-object": "1.x",
     "batch-write-stream": "~0.1.6",
     "minimatch": "~2.0.1",
     "readable-stream": "~1.0.33"
@@ -41,7 +42,7 @@
     "grunt-usemin": "*",
     "memdown-sync": "~1.4.1",
     "mocha": "~2.0.1",
-    "powerbuild": "*",
+    "powerbuild": "latest",
     "sinon": "~1.12.2",
     "sinon-chai": "~2.6.0",
     "source-map-support": "*"
