--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nosql-stream",
-  "version": "1.1.3",
+  "version": "1.2.1",
   "description": "add the read/write streamable ability to abstract-nosql database.",
   "homepage": "https://github.com/snowyu/nosql-stream",
   "main": "./index",
@@ -16,8 +16,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "abstract-iterator": ">=0.9.0",
-    "abstract-object": "1.x",
+    "abstract-iterator": ">=0.10.0",
+    "abstract-object": ">=1.4.0",
     "batch-write-stream": "~0.1.6",
     "minimatch": "~2.0.1",
     "readable-stream": "~1.0.33"
@@ -40,7 +40,7 @@
     "grunt-rev": "*",
     "grunt-saucelabs": "*",
     "grunt-usemin": "*",
-    "memdown-sync": "~1.4.1",
+    "memdown-sync": ">=1.6.0",
     "mocha": "~2.0.1",
     "powerbuild": "latest",
     "sinon": "~1.12.2",
