--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nosql-stream",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "add the read/write streamable ability to abstract-nosql database.",
   "homepage": "https://github.com/snowyu/nosql-stream",
   "main": "./index",
@@ -67,12 +67,7 @@
     "name": "Riceball LEE",
     "email": "snowyu.lee@gmail.com"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/snowyu/nosql-stream/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/snowyu/nosql-stream/issues"
   }
